crates/reinhardt-pages/tests/ui/page/fail/invalid_event_syntax.stderr
error: expected an expression
 --> tests/ui/page/fail/invalid_event_syntax.rs:9:11
  |
9 |         @click: ,
  |                 ^
